--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ h3 {
 .game {
     margin: 0 auto;
     max-width: 600px;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,12 +92,14 @@ h3 {
         background-color: #2b3040;
         display: flex;
         justify-content: space-evenly;
+        min-height: 106px;
     }
 
     &__link {
         text-align: center;
         color: #8d91a3;
         padding: 25px 20px;
+        cursor: pointer;
 
         & #tooltip {
             filter: url(#filter);
